changing paths on presentaion references

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,12 @@
             "**/node_modules/**",
             "**/docs/**",
             "**/temp/**"
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
         ]
     }
 }
