--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "@fortawesome/free-solid-svg-icons": "^5.3.1",
         "@fortawesome/react-fontawesome": "^0.1.2",
         "axios": "^0.16.2",
+        "chokidar": "^2.0.4",
+        "htmr": "^0.7.0",
         "i": "^0.3.6",
+        "jdown": "^0.6.5",
         "npm": "^6.4.1",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
