--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "npm": "^6.4.1",
         "react": "^16.0.0",
         "react-dom": "^16.0.0",
+        "react-helmet": "^5.2.0",
         "react-router": "^4.2.0",
         "react-static": "^5.9.7"
     },
